Fix styling on mobile devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,10 +8,10 @@ a {
 
 .wallpaper {
   display: block;
-  height: 100%;
+  height: 100vh;
   left: 0;
   top: 0;
-  width: 100%;
+  width: 100vw;
 }
 
 .title-job, 
@@ -88,6 +88,7 @@ span::selection {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100vw;
 }
 
 .content-section {
