--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,11 +1,11 @@
 
 .footer{
     margin: 4rem 1rem;
-    width: 100%;
 
     .footer-text {
         margin: 0.3rem 0;
         font-size: 0.9rem;
+        text-align: center;
     }
 
     .hr {
